Regression: Color picker no longer accepts manual HEX color values in Blender 4.2.0 Alpha #121902

Closed
opened 2024-05-17 07:52:38 +02:00 by Anton Raves · 7 comments

System Information
Operating system: Linux-6.8.9-300.fc40.x86_64-x86_64-with-glibc2.39 64 Bits, WAYLAND UI
Graphics card: Mesa Intel(R) UHD Graphics 630 (CFL GT2) Intel 4.6 (Core Profile) Mesa 24.0.7

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-05-15 23:03, hash: ecec9de4e6be
Worked: (newest version of Blender that worked as expected)

Short description of error
Color picker no longer accepts manual HEX color values in Blender 4.2.0 Alpha

Exact steps for others to reproduce the error

  • Launch Blender
  • Select the default cube
  • Go to its Material properties
  • Click the Base Color in the Principled BSDF shader
  • Click Hex
  • Try changing the value of #E7E7E7 manually (by entering the value in the Hex: field) to something else, for example #BBBBBB, pressing Enter to confirum will revert to #E7E7E7, where it should have accepted the #BBBBBB

Dragging the mouse in the color wheel does change color values. The Alpha build from yesterday has the same bug / problem.

**System Information** Operating system: Linux-6.8.9-300.fc40.x86_64-x86_64-with-glibc2.39 64 Bits, WAYLAND UI Graphics card: Mesa Intel(R) UHD Graphics 630 (CFL GT2) Intel 4.6 (Core Profile) Mesa 24.0.7 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-05-15 23:03, hash: `ecec9de4e6be` Worked: (newest version of Blender that worked as expected) **Short description of error** Color picker no longer accepts manual HEX color values in Blender 4.2.0 Alpha **Exact steps for others to reproduce the error** - Launch Blender - Select the default cube - Go to its Material properties - Click the Base Color in the Principled BSDF shader - Click Hex - Try changing the value of #E7E7E7 manually (by entering the value in the Hex: field) to something else, for example #BBBBBB, pressing Enter to confirum will revert to #E7E7E7, where it should have accepted the #BBBBBB Dragging the mouse in the color wheel does change color values. The Alpha build from yesterday has the same bug / problem.
Anton Raves added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2024-05-17 07:52:39 +02:00
Author

Tried this on both Fedora Linux 40 as well as macOS Apple Silicon machines, they both have it.

Tried this on both Fedora Linux 40 as well as macOS Apple Silicon machines, they both have it.
Member

Hi, thanks for the report. Can confirm the regression.

Hi, thanks for the report. Can confirm the regression.
Member

Intermediate builds are freezing after opening the color wheel popup. So I'm in doubt whether bisecting will return correct commit, checking

Intermediate builds are freezing after opening the color wheel popup. So I'm in doubt whether bisecting will return correct commit, checking
Member

Caused by 7d80fde033
@JulianEisel ^

Caused by 7d80fde033dd7ca2496f6433038dca80a54d9647 @JulianEisel ^
Anton Raves changed title from Color picker no longer accepts manual HEX color values in Blender 4.2.0 Alpha to Regresssion: Color picker no longer accepts manual HEX color values in Blender 4.2.0 Alpha 2024-05-17 13:21:34 +02:00
Anton Raves changed title from Regresssion: Color picker no longer accepts manual HEX color values in Blender 4.2.0 Alpha to Regression: Color picker no longer accepts manual HEX color values in Blender 4.2.0 Alpha 2024-05-17 13:22:11 +02:00
Member

This appears to happen due to refreshing ui_block_func_COLOR during text edit

i.e. by callingED_region_tag_refresh_ui in ui_do_but_textedit

This appears to happen due to refreshing `ui_block_func_COLOR` during text edit i.e. by calling`ED_region_tag_refresh_ui` in `ui_do_but_textedit`
Member

Looks tricky. But my suspicion is that this line I added is problematic: https://projects.blender.org/blender/blender/src/branch/main/source/blender/editors/interface/regions/interface_region_popup.cc#L930

Seems like this popup doesn't work well with refreshing somehow. Good news is that #122068 turns the asset shelf popup into a popover, so this change is removed again.

Looks tricky. But my suspicion is that this line I added is problematic: https://projects.blender.org/blender/blender/src/branch/main/source/blender/editors/interface/regions/interface_region_popup.cc#L930 Seems like this popup doesn't work well with refreshing somehow. Good news is that #122068 turns the asset shelf popup into a popover, so this change is removed again.
Author

Looks tricky. But my suspicion is that this line I added is problematic: https://projects.blender.org/blender/blender/src/branch/main/source/blender/editors/interface/regions/interface_region_popup.cc#L930

Seems like this popup doesn't work well with refreshing somehow. Good news is that #122068 turns the asset shelf popup into a popover, so this change is removed again.

In 7be5802187 we can still not manually enter / change color values in the color picker, has #122068 been commited to the daily experimental builds yet...?

> Looks tricky. But my suspicion is that this line I added is problematic: https://projects.blender.org/blender/blender/src/branch/main/source/blender/editors/interface/regions/interface_region_popup.cc#L930 > > Seems like this popup doesn't work well with refreshing somehow. Good news is that #122068 turns the asset shelf popup into a popover, so this change is removed again. In 7be580218740 we can still not manually enter / change color values in the color picker, has #122068 been commited to the daily experimental builds yet...?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-05-23 13:22:52 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#121902
No description provided.